Mon Dec  8 10:08:45 GMT 2008  Colin Watson  <cjwatson@debian.org>

	Improve sorting and de-duplication of manual page candidates (Debian
	bugs #389762 and #496172).

	* src/man.c (struct candidate): Add ult member.
	  (duplicate_candidates): Pare down to only check for duplication
	  rather than trying to compare as well; the latter function is now
	  handled entirely by compare_candidates. Compare the ultimate
	  source file as the first test.
	  (compare_candidates): Compare locale elements in candidate paths
	  before comparing sections.
	  (add_candidates): Look up the ultimate source file if necessary,
	  and save it in the candidate structure. Use duplicate_candidates
	  for duplicate testing only and compare_candidates for comparison.
	  Insert elements at the latest possible position rather than the
	  earliest possible.
	  (try_section): Pass the ultimate source file that was already
	  looked up here.
	  (try_db): Adjust for new add_candidate signature.

Sun Dec  7 17:43:21 GMT 2008  Colin Watson  <cjwatson@debian.org>

	Make handling of terminal widths for cat pages configurable (Debian
	bug #121997).

	* src/manp.c (add_to_dirlist): Recognise new MINCATWIDTH,
	  MAXCATWIDTH, and CATWIDTH directives.
	* src/man_db.conf.in: Add MINCATWIDTH, MAXCATWIDTH, and CATWIDTH.
	* src/man.c (get_roff_line_length): Use CATWIDTH rather than the
	  terminal width if the former is non-zero.
	  (add_roff_line_length): Check the terminal width against
	  MINCATWIDTH and MAXCATWIDTH rather than checking whether it
	  differs from groff's default (via get_roff_line_length). Allow cat
	  page saving regardless in catman mode.
	  (make_roff_command): Forbid saving cat pages in troff mode here
	  rather than via add_roff_line_length/get_roff_line_length.
	* man/man5/manpath.man5 (FORMAT): Document MINCATWIDTH, MAXCATWIDTH,
	  and CATWIDTH.

Sun Dec  7 17:17:34 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* man/man5/manpath.man5 (FORMAT): Document SECTION.
